fix slight overlap for title bar

--- a/src/app/title-bar/title-bar.component.scss
+++ b/src/app/title-bar/title-bar.component.scss
@@ -4,7 +4,7 @@ $lupa-pink: rgba(229, 19, 100);
 .div-logo-title {
     height: 100%;
     width: 32%;
-    min-width: 10em;
+    min-width: 9em;
     margin-right: 3%;
     display: flex;
     align-items: center;
